TASQ-5,TASQ-7: Default project assignee, fix bug with too long edited description

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -166,3 +166,6 @@ form.form-search:before {
 	top: 0;
 	width: 5px;
 }
+.paddedleft40{
+	padding-left: 40px
+}
